--- a/spring-boot-crm/src/main/resources/templates/system/power/userList.html
+++ b/spring-boot-crm/src/main/resources/templates/system/power/userList.html
@@ -61,43 +61,21 @@
     <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">搜索</a>
       </div>
 
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <select class="selectpicker" multiple="multiple" data-live-search="true" data-live-search-placeholder="Search" data-actions-box="true">
-            <optgroup label="filter1">
-              <option>option1</option>
-              <option>option2</option>
-              <option>option3</option>
-              <option>option4</option>
-            </optgroup>
-            <optgroup label="filter2">
-              <option>option1</option>
-              <option>option2</option>
-              <option>option3</option>
-              <option>option4</option>
-            </optgroup>
-            <optgroup label="filter3">
-              <option>option1</option>
-              <option>option2</option>
-              <option>option3</option>
-              <option>option4</option>
-            </optgroup>
-          </select>
-        </div>
-
+      <div class="navbar-form navbar-left" role="search">
+        
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search" name="q"/>
+          <input type="text" class="form-control" placeholder="Search" id="username" th:value="${username}"/>
 
           <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
           </div>
         </div>
-        <button type="submit" class="btn btn-default">Search</button>
+        <button id="search_btn" class="btn btn-default">Search</button>
 
-      </form>
+      </div>
           
     </div>
     <!-- .container-fluid -->
@@ -117,6 +95,9 @@
      <button id="btn_add" type="button" class="btn btn-default">
          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
      </button>
+      <button id="btn_addBranchLeader" type="button" class="btn btn-default">
+         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>添加分管部门
+      </button>
       <button id="btn_batchAdd" type="button" class="btn btn-default">
          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>批量导入用户
       </button>
@@ -241,12 +222,13 @@
 
     //请求服务数据时所传参数
     function queryParams(params){
+        
         return{
             //每页多少条数据
             pageSize: params.limit,
             //请求第几页
             pageIndex:params.pageNumber,
-            Name:$('#search_name').val(),
+            username:$('#username').val(),
             Tel:$('#search_tel').val()
         }
     }
@@ -288,6 +270,11 @@
     $('#btn_add').click(function(){
     	
     	location.href="/user/registerForm";
+    });
+    //添加分管部门
+    $('#btn_addBranchLeader').click(function(){
+    	var dataArr=$('#mytab').bootstrapTable('getSelections');
+    	location.href="/user/inChargeForm/"+dataArr[0].id;
     });
     //批量导入用户
     
