--- a/spring-boot-crm/src/main/resources/templates/user/loginForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/loginForm.html
@@ -60,6 +60,7 @@
 		<input type="text" name="tel" value="" class="tel" placeholder="手机号码" th:field="*{phone}"/><br/>
 		<input type="password" name="password" value="" class="pwd" placeholder="登录密码" th:field="*{password}" />
 		<input type="submit" value="登录" class="tj"/>
+		<span th:text="${msg}"></span>
 		<p><span class="jzw"><input type="checkbox" name="votes[]"/></span><span>记住我</span><span style=" float:right; margin:0 8% 0 0; cursor: pointer;">忘记密码？</span>
 		<span style=" float:right; margin:0 8% 0 0; cursor: pointer;"><a href="/user/registerForm">注册</a></span></p>
 		
