--- a/spring-boot-crm/src/main/resources/templates/user/loginForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/loginForm.html
@@ -14,7 +14,7 @@
 	<META name="publishedtype" content="1"/>
 	<META name="pagetype" content="2"/>
 	<META name="subject" content="13775;1"/>
-	<title>一线考察干部系统_福州新闻网</title>
+	<title>福州日报社一线考核系统</title>
 
 	<script type="text/javascript" src="//img.fznews.com.cn/www/javascript/jquery.js"></script>
 	<!--[If Lt IE 9]><script src="//img.fznews.com.cn/www/js/html5shiv/dist/html5shiv.js"></script><![endif]-->
@@ -53,7 +53,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/></head>
 <body>
 	<div id="content1">
-		<div class="left"><img src="/images/bj1-1.jpg"/><span>福州日报社<br/>一线干部考察系统</span></div>
+		<div class="left"><img src="/images/bj1-1.jpg"/><span>福州日报社日常<br/>一线考核系统</span></div>
 		<div class="right">
 		<form class="dl" action="#" method="post" th:action="@{/user/login}" th:object="${user}">
 		<div class="hd-tit"><span>登录</span></div>
