--- a/spring-boot-crm/src/main/resources/static/css/grid.css
+++ b/spring-boot-crm/src/main/resources/static/css/grid.css
@@ -3,7 +3,7 @@
 }
 
 div { 
-	overflow:hidden; white-space:nowrap; text-overflow:ellipsis;
+	overflow:hidden; white-space:wrap; text-overflow:ellipsis;
 	border-bottom: 2px solid #ddd;
 	font-size: 16px;
 	line-height: 1.42857143;
