--- a/spring-boot-crm/src/main/resources/templates/user/updateForm.html
+++ b/spring-boot-crm/src/main/resources/templates/user/updateForm.html
@@ -64,7 +64,9 @@
          <div class="form-group">
             <input type="text" class="form-control input-lg" placeholder="真实姓名" th:field="*{username}" th:value="*{username}"   maxlength="16"/>
           </div>
-
+          <div class="form-group">
+            <input type="text" class="form-control input-lg" placeholder="职务" th:field="*{position}" th:value="*{position}" />
+          </div>
 	    <div class="form-group">
 	      <select  class="selectpicker" data-live-search="true" title="请正确选择职级..."  th:field="*{post.pId}" th:value="*{post.pId}">
 	        <option th:each="p:${posts}" th:value="${p.pId}" th:text="${p.name}"></option>
@@ -73,7 +75,7 @@
 
 	      <label style="text-align:center;">----------修改密码-----------</label>
 	      <div class="form-group">
-            <input type="password" class="form-control input-lg" placeholder="旧密码"  maxlength="16"/>
+            <input  type="password" class="form-control input-lg" placeholder="旧密码"  maxlength="16"/>
           </div>
           <div class="form-group">
             <input type="password" class="form-control input-lg" placeholder="新密码" th:field="*{password}"  maxlength="16"/>
