--- a/spring-boot-crm/src/main/resources/templates/system/activiti/Process/groupManagerForm.html
+++ b/spring-boot-crm/src/main/resources/templates/system/activiti/Process/groupManagerForm.html
@@ -42,7 +42,7 @@
     <script src="/js/bootstrap-datetimepicker.min.js"></script>
   </head>
 <body>
-  <div id="loginDiv" class="modal show" style="top:10%">
+  <div id="loginDiv" class="modal show">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
