--- a/spring-boot-crm/src/main/resources/templates/system/power/userList.html
+++ b/spring-boot-crm/src/main/resources/templates/system/power/userList.html
@@ -73,7 +73,7 @@
       <div class="navbar-form navbar-left" role="search">
         
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search" id="username" th:value="${username}"/>
+          <input type="text" class="form-control" placeholder="Search" id="username"  th:value="${username}"/>
 
           <div class="input-group-btn">
             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
@@ -135,7 +135,7 @@
 </div>
    <script th:inline="javascript">
   //tab切换 
-
+	console.log('username'+[[${username}]]);
 
     var taskType = [[${taskType}]];
      $("#" + taskType).attr("class", "active");
@@ -251,7 +251,7 @@
     function operateDept(value,row,index){
        var result="";
        for(x in row.userLinkDepts){
-       	result+='<span>'+row.userLinkDepts[x].secondLevel.name+'->'+row.userLinkDepts[x].firstLevel.name+'</span>,';
+       	result+='<a href="javascript:void(0)" onclick="deleteUserLinkDept('+row.userLinkDepts[x].id+')">'+row.userLinkDepts[x].secondLevel.name+'->'+row.userLinkDepts[x].firstLevel.name+'</a>,';
        }
        return [  
             
@@ -284,7 +284,13 @@
         return $(window).height() -280;
     }
     
-
+	//删除分管部门
+	function deleteUserLinkDept(id){
+		if(confirm("是否确定要删除？")){
+	        console.log("/user/deleteUserLinkDept/"+id+"?username="+$('#username').val());
+			location.href="/user/deleteUserLinkDept/"+id+"?username="+$('#username').val();
+		}
+	}
     
     //查看权限
     $('#btn_power').click(function(){
