--- a/spring-boot-crm/src/main/resources/templates/user/responsibility/assessmentList.html
+++ b/spring-boot-crm/src/main/resources/templates/user/responsibility/assessmentList.html
@@ -76,6 +76,7 @@
 												<a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">用户管理</a>
 												<ul class="dropdown-menu">
 													<li><a href="/process/activiti/toStart/others/Process/deleteUser">删除用户</a></li>
+													<li><a href="/process/activiti/toStart/others/Process/disableUser">离退用户设置</a></li>
 												</ul>
 											</li>
 											<li class="dropdown">
